--- a/website/pages/getting_started.html
+++ b/website/pages/getting_started.html
@@ -48,44 +48,82 @@
 </style>
 
 
-<h3>Connection Details</h3>
+<h3>链接</h3>
 <div class="stats">
-    <div><i class="fa fa-cloud"></i> Mining Pool Address: <span id="miningPoolHost"></span></div>
+    <div><i class="fa fa-cloud"></i> 挖矿地址: <span id="miningPoolHost"></span></div>
 </div>
 
-<h4>Mining Ports</h4>
 <div id="miningPorts" class="row">
     <div class="stats">
-        <div><i class="fa fa-tachometer"></i> Port: <span class="miningPort"></span></div>
-        <div><i class="fa fa-unlock-alt"></i> Starting Difficulty: <span class="miningPortDiff"></span></div>
-        <div><i class="fa fa-question"></i> Description: <span class="miningPortDesc"></span></div>
+        <div><i class="fa fa-tachometer"></i> 端口: <span class="miningPort"></span></div>
+        <div><i class="fa fa-unlock-alt"></i> 难度: <span class="miningPortDiff"></span></div>
+        <div><i class="fa fa-question"></i> 描述: <span class="miningPortDesc"></span></div>
     </div>
+	
 </div>
 
 <hr>
 
-<h3>For <i class="fa fa-windows"></i> Windows users new to mining</h3>
+<h3>For <i class="fa fa-windows"></i> Windows 挖软件软件</h3>
 <p class="getting_started_windows">
-    You can <a class="btn btn-default btn-sm" target="_blank" id="easyminer_link"><i class="fa fa-download"></i> Download</a>
-    and run <a target="_blank" href="https://github.com/zone117x/cryptonote-easy-miner">cryptonote-easy-miner</a> <i class="fa fa-github"></i>
-    which will automatically generate your wallet address and run CPUMiner with the proper parameters.
+    软件测试中 <a class="btn btn-default btn-sm" target="_blank" id="easyminer_link"><i class="fa fa-download"></i> 即将提供下载</a>
+    解压后运行 <a target="_blank" href="#">easy-miner</a> <i class="fa fa-github"></i>
+    同时支持CPU和GPU
 </p>
 
 <hr>
 
-<h3>Mining Apps</h3>
+<h3>在线门罗币钱包</h3>
+<p>
+    <ul>
+        <li><a target="_blank" href="http://monero.cc/getting-started/">Getting started with Monero</a></li>
+        <li>Monero information and news on its <a href="https://bitcointalk.org/index.php?topic=583449.0">BitcoinTalk announcement thread</a></li>
+    </ul>
+</p>
+
+<hr>
+
+<h3>挖矿程序软件</h3>
 <div class="yourStats table-responsive">
     <table class="table">
         <thead>
         <tr>
-            <th><i class="fa fa-book"></i> App Name</th>
-            <th><i class="fa fa-car"></i> Architecture</th>
-            <th><i class="fa fa-download"></i> Downloads</th>
-            <th><i class="fa fa-comments"></i> Discussion</th>
-            <th><i class="fa fa-file-code-o"></i> Source Code</th>
+            <th><i class="fa fa-book"></i> 矿机名称 App Name</th>
+            <th><i class="fa fa-car"></i> 矿机类型 Architecture</th>
+            <th><i class="fa fa-download"></i> 下载地址 Downloads</th>
+            <th><i class="fa fa-comments"></i> 论坛 Discussion</th>
+            <th><i class="fa fa-file-code-o"></i> 源码 Source Code</th>
         </tr>
         </thead>
         <tbody id="mining_apps">
+        <tr>
+            <td class="miningAppTitle">XMR-Stak-CPU (by fireice_uk)</td>
+            <td>CPU</td>
+            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-cpu/releases">Github</a></td>
+            <td><a target="_blank" href="https://www.reddit.com/r/Monero/comments/5lsfgt/xmrstakcpu_high_performance_open_source_miner/">Reddit</a></td>
+            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-cpu">Github</a></td>
+        </tr>
+        <tr>
+            <td colspan="5">
+                <span>Example:</span>
+                <code>xmr-stak-cpu</code>
+                Please edit <code>config.txt</code> file to suit your needs.
+            </td>
+        </tr>
+        <tr>
+            <td class="miningAppTitle">XMR-Stak-AMD (by fireice_uk)</td>
+            <td>OpenCL (AMD)</td>
+            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-amd/releases">Github</a></td>
+            <td><a target="_blank" href="https://www.reddit.com/r/Monero/comments/5prg4a/xmrstakamd_released/">reddit</a></td>
+            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-amd">Github</a></td>
+        </tr>
+        <tr>
+            <td colspan="5">
+                <span>Example:</span>
+                <code>xmr-stak-amd</code>
+                Please edit <code>config.txt</code> file to suit your needs.
+            </td>
+        </tr>
         <tr>
             <td class="miningAppTitle">CPUMiner (forked by LucasJones & Wolf)</td>
             <td>CPU</td>
@@ -95,7 +133,7 @@
         </tr>
         <tr>
             <td colspan="5">
-                <span>Example:</span>
+                <span>示例 Example:</span>
                 <code>minerd -a cryptonight -o stratum+tcp://<span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
             </td>
         </tr>
@@ -104,11 +142,11 @@
             <td>CPU</td>
             <td><a target="_blank" href="https://mega.co.nz/#F!UlkU0RyR!E8n4CFkqVu0WoOnsJnQkSg">MEGA</a></td>
             <td><a target="_blank" href="https://twitter.com/yvg1900">Twitter</a></td>
-            <td>Proprietary <i class="fa fa-frown-o"></i></td>
+            <td>未开源 Proprietary <i class="fa fa-frown-o"></i></td>
         </tr>
         <tr>
             <td colspan="5">
-                <span>Example:</span>
+                <span>示例 Example:</span>
                 <code>yam -c x -M stratum+tcp://<span class="exampleAddress">YOUR_WALLET_ADDRESS</span>:x@<span class="exampleHost"></span>:<span class="examplePort"></span>/xmr</code>
             </td>
         </tr>
@@ -117,11 +155,11 @@
             <td>CPU</td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=647251.0">BitcoinTalk</a></td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=647251.0">BitcoinTalk</a></td>
-            <td>Proprietary <i class="fa fa-frown-o"></i></td>
+            <td>未开源 Proprietary <i class="fa fa-frown-o"></i></td>
         </tr>
         <tr>
             <td colspan="5">
-                <span>Example:</span>
+                <span>示例 Example:</span>
                 <code>NsCpuCNMiner64 -o stratum+tcp://<span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
             </td>
         </tr>
@@ -130,11 +168,11 @@
             <td>OpenCL (AMD)</td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=638915.0">BitcoinTalk</a></td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=638915.0">Discussion</a></td>
-            <td>Proprietary <i class="fa fa-frown-o"></i></td>
+            <td>未开源 Proprietary <i class="fa fa-frown-o"></i></td>
         </tr>
         <tr>
             <td colspan="5">
-                <span>Example:</span>
+                <span>示例 Example:</span>
                 <code>NsGpuCNMiner -o stratum+tcp://<span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
             </td>
         </tr>
@@ -147,7 +185,7 @@
         </tr>
         <tr>
             <td colspan="5">
-                <span>Example:</span>
+                <span>示例 Example:</span>
                 <code>ccminer -o stratum+tcp://<span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
             </td>
         </tr>
