--- a/website/pages/support.html
+++ b/website/pages/support.html
@@ -1,5 +1,7 @@
 <h3>Contact</h3>
 <p>Email pool support at <a id="emailLink" href=""></a></p>
+<p>irc:kinglark</p>
+<p>如果您的算力较大，或是连接数量特别多（超过1000），请联系管理员</p>
 
 <h3>Chat Room</h3>
 <iframe id="kiwi_irc" style="border:0; width:100%; height:500px;"></iframe>
