--- a/website/index.html
+++ b/website/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 
-    <title>门罗币矿池&XMRPool</title>
-
+    <title>门罗币矿池 — XMRPool</title>
 
     <script src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
@@ -319,7 +318,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand"></span>门罗币矿池&XMRPool</a>
+            <a class="navbar-brand"></span> 门罗币矿池 </a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -361,10 +360,8 @@
 
 <footer>
     <div class="text-muted">
-        Powered by <a target="_blank" href="//github.com/zone117x/node-cryptonote-pool"><i class="fa fa-github"></i> node-cryptonote-pool</a>
-        <span id="poolVersion"></span>
-        created by Matthew Little & open sourced under the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL</a>
-    </div>
+        Powered by <a target="_blank" href="//github.com/online2311/cryptonote-universal-pool"><i class="fa fa-github"></i> cryptonote-universal-pool</a><span id="poolVersion"></span>
+     </div>
 </footer>
 
 
