--- a/website/pages/payments.html
+++ b/website/pages/payments.html
@@ -18,10 +18,10 @@
 </style>
 
 <div class="paymentsStatHolder">
-    <span class="bg-primary">总计支付次数 <span id="paymentsTotal"></span></span>
-    <span class="bg-info">总计支付矿工数量 <span id="paymentsTotalPaid"></span></span>
-    <span class="bg-info">Minimum Payment Threshold: <span id="paymentsMinimum"></span></span>
-    <span class="bg-info">Denomination Unit: <span id="paymentsDenomination"></span></span>
+    <span class="bg-primary">总计支付次数: <span id="paymentsTotal"></span></span>
+    <span class="bg-info">总计支付矿工数量: <span id="paymentsTotalPaid"></span></span>
+    <span class="bg-info">最小支付数量: <span id="paymentsMinimum"></span></span>
+    <span class="bg-info">最小货币单位: <span id="paymentsDenomination"></span></span>
 </div>
 
 <hr>
