--- a/website/pages/getting_started.html
+++ b/website/pages/getting_started.html
@@ -48,18 +48,20 @@
 </style>
 
 
-<h3>链接</h3>
+<h3>矿池挖矿信息：</h3>
 <div class="stats">
-    <div><i class="fa fa-cloud"></i> 挖矿地址: <span id="miningPoolHost"></span></div>
+    <div><i class="fa fa-cloud"></i> 矿池挖矿地址: <span id="miningPoolHost"></span>:难度端口(3333 5555 7777 8888)</div>
+<h4>难度越高出块几率越高收益越高，算力过低用户可能无任何收益</h4>
+<h4>目前本矿池支持直接发送到交易所钱包！只要在挖矿地址后加.PaymentID即可自动发送（EXCHANGE_ADDRESS.your_payment_id）[不推荐]</h4>
+<h4>注意：如果使用 钱包地址.PaymentID 挖矿，查询挖矿速度也要用这个格式查询。挖矿至交易所充值地址需要每满10个门罗币支付一次。</h4>
+<h4>如果你要固定难度请用 钱包地址@难度 或者 钱包地址.payment_id@难度 最大难度是50000</h4>
 </div>
-
 <div id="miningPorts" class="row">
     <div class="stats">
-        <div><i class="fa fa-tachometer"></i> 端口: <span class="miningPort"></span></div>
-        <div><i class="fa fa-unlock-alt"></i> 难度: <span class="miningPortDiff"></span></div>
-        <div><i class="fa fa-question"></i> 描述: <span class="miningPortDesc"></span></div>
+        <div><i class="fa fa-tachometer"></i> 矿池端口: <span class="miningPort"></span></div>
+        <div><i class="fa fa-unlock-alt"></i> 起始难度: <span class="miningPortDiff"></span></div>
+        <div><i class="fa fa-question"></i> 说明: <span class="miningPortDesc"></span></div>
     </div>
-	
 </div>
 
 <hr>
@@ -73,7 +75,7 @@
 
 <hr>
 
-<h3>在线门罗币钱包</h3>
+<h3>在线门罗币钱包[推荐]</h3>
 <p>
     <ul>
         <li><a target="_blank" href="http://monero.cc/getting-started/">Getting started with Monero</a></li>
@@ -83,16 +85,16 @@
 
 <hr>
 
-<h3>挖矿程序软件</h3>
+<h3>挖矿程序</h3>
 <div class="yourStats table-responsive">
     <table class="table">
         <thead>
         <tr>
-            <th><i class="fa fa-book"></i> 矿机名称 App Name</th>
-            <th><i class="fa fa-car"></i> 矿机类型 Architecture</th>
-            <th><i class="fa fa-download"></i> 下载地址 Downloads</th>
-            <th><i class="fa fa-comments"></i> 论坛 Discussion</th>
-            <th><i class="fa fa-file-code-o"></i> 源码 Source Code</th>
+            <th><i class="fa fa-book"></i> 矿机名称 </th>
+            <th><i class="fa fa-car"></i> 矿机类型 </th>
+            <th><i class="fa fa-download"></i> 下载地址 </th>
+            <th><i class="fa fa-comments"></i> 论坛 </th>
+            <th><i class="fa fa-file-code-o"></i> 源码 </th>
         </tr>
         </thead>
         <tbody id="mining_apps">
