--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -77,50 +77,30 @@
     }
 
 </style>
-
-
-<div id="siteInfo" style="text-align:center;">
-    <!-- <div class="panel panel-primary"> -->
-    <div class="panel-heading">
-        <h3 class="panel-title"矿 池 公 告</h3>
-    </div>
-    <div class="panel-body">
-        **********高效的集群架构,数百万级别的客户端负载量，国内服务器，超级低的延时**********
-        <br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**********超低的费率，相对较高的幸运度，相对较多的收益**********
-        <br>
-        **********可定制的集中支付，可将多个挖矿地址支付同到一个钱包，满足特殊需求**********
-        <br><br><font color="blue"><strong>温馨提示：请使用本地钱包地址进行挖矿，不支持矿池直接转账到平台！！！</strong></font>
-		<br><br><font color="green"><strong>矿池采用最合适的PROP比例分配方式计算收益（出块后才有分配，即时分配），非矿池包工方头方式，每日早6点和晚7点支付收益，0.01xmr起付</strong></font>
-    </div>
-    </div>
-</div>
-
 <div class="row">
     <div class="col-md-4 stats">
         <h3>网络状态</h3>
         <div><i class="fa fa-tachometer"></i> 全网速率： <span id="networkHashrate"></span></div>
-        <div><i class="fa fa-clock-o"></i> 距上次爆块时间： <span id="networkLastBlockFound"></span></div>
-        <div><i class="fa fa-unlock-alt"></i> 当前难度： <span id="networkDifficulty"></span></div>
-        <div><i class="fa fa-bars"></i> 区块长度： <span id="blockchainHeight"></span></div>
-        <div><i class="fa fa-money"></i> 上一区块奖励： <span id="networkLastReward"></span></div>
-        <div><i class="fa fa-paw"></i> 上一区块地址： <a id="lastHash" target="_blank"></a></div>
+        <div><i class="fa fa-clock-o"></i> 全网爆块： <span id="networkLastBlockFound"></span></div>
+        <div><i class="fa fa-unlock-alt"></i> 全网难度： <span id="networkDifficulty"></span></div>
+        <div><i class="fa fa-bars"></i> 区块高度： <span id="blockchainHeight"></span></div>
+        <div><i class="fa fa-money"></i> 区块出币： <span id="networkLastReward"></span></div>
+	<div><i class="fa fa-paw"></i> 区块地址： <a id="lastHash" target="_blank"></a></div>
     </div>
-
     <div class="col-md-4 stats">
         <h3>矿池状态</h3>
         <div><i class="fa fa-tachometer"></i> 矿池算力： <span id="poolHashrate"></span></div>
-        <div><i class="fa fa-clock-o"></i> 距上次爆块时间： <span id="poolLastBlockFound"></span></div>
-        <div><i class="fa fa-users"></i> 在线矿工数量： <span id="poolMiners"></span></div>
-        <div id="donations"><i class="fa fa-gift"></i> 赞助费率: <span id="poolDonations"></span></div>
-        <div><i class="fa fa-money"></i> 挖矿费率 <span id="poolFee"></span></div>
-        <div><i class="fa fa-history"></i> 出块需要的时间 <span id="blockSolvedTime"></span> (预计)</div>
+        <div><i class="fa fa-clock-o"></i> 矿池出块： <span id="poolLastBlockFound"></span></div>	
+        <div><i class="fa fa-users"></i> 矿工数量： <span id="poolMiners"></span></div>
+        <div id="donations"><i class="fa fa-gift"></i> 赞助费率： <span id="poolDonations"></span></div>
+        <div><i class="fa fa-money"></i> 矿池税率： <span id="poolFee"></span></div>        
+        <div><i class="fa fa-history"></i> 出块速率： <span id="blockSolvedTime"></span> (预计)</div>
     </div>
 
     <div class="col-md-4 stats marketRate">
         <h3 id="marketHeader">市场行情</h3>
         <div class="marketFooter">更新时间: <span id="marketLastUpdated"></span></div>
-        <div class="marketFooter">Powered by <a href="https://www.cryptonator.com/">Cryptonator</a></div>
+ <!---       <div class="marketFooter">Powered by <a href="https://www.cryptonator.com/">Cryptonator</a></div> ---!>
     </div>
 </div>
 
@@ -128,7 +108,7 @@
 
 <div class="row chartsPoolStat">
     <div class="col-sm-2 chartWrap">
-        <h4>Hash/USD <span data-toggle="tooltip" data-placement="top" data-original-title="Reward * Rate / Difficulty"><i class="fa fa-question-circle"></i></span></h4>
+        <h4>Hash/USD <span data-toggle="tooltip" data-placement="top" data-original-title="奖励*费率/难度"><i class="fa fa-question-circle"></i></span></h4>
         <div id="chartHashUsd" data-chart="profit">
             <div class="chart"></div>
             <!-- <p class="text-center" id="cur_profit">-</p> -->
@@ -142,21 +122,21 @@
         </div>
     </div>
     <div class="col-sm-20 chartWrap">
-        <h4>Difficulty</h4>
+        <h4>算力难度</h4>
         <div id="chartDifficulty" data-chart="diff">
             <div class="chart"></div>
             <!-- <p class="text-center" id="cur_diff">-</p> -->
         </div>
     </div>
     <div class="col-sm-20 chartWrap">
-        <h4>Hashrate</h4>
+        <h4>矿池算力</h4>
         <div id="chartHashrate" data-chart="hashrate">
             <div class="chart"></div>
             <!-- <p class="text-center" id="cur_hashrate">-</p> -->
         </div>        
     </div>
     <div class="col-sm-20 chartWrap">        
-        <h4>Workers</h4>
+        <h4>矿工数量</h4>
         <div id="chartWorkers" data-chart="workers">
             <div class="chart"></div>
             <!-- <p class="text-center" id="cur_workers">-</p> -->
@@ -223,10 +203,10 @@
 <!-- <hr> -->
 
 <div id="miningProfitCalc">
-    <h3>挖矿收益计算（预估数量 ，不准）</h3>
+    <h3>收益预计参考<h4>（此结果是根据全网难度与全网算力计算得出仅供参考，最终收益已实际支付货币数量为准）</h4></h3>
     <div id="calcHashHolder">
         <div class="input-group">
-            <input type="number" class="form-control" id="calcHashRate" placeholder="输入您的速度">
+            <input type="number" class="form-control" id="calcHashRate" placeholder="请输入您的挖矿速率">
             <div class="input-group-btn">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="calcHashDropdown">
                     <span id="calcHashUnit" data-mul="1">KH/s</span> <span class="caret"></span>
@@ -238,7 +218,7 @@
                 </ul>
             </div>
             <span class="input-group-addon">=</span>
-            <span class="input-group-addon" id="calcHashResultsHolder"><span id="calcHashAmount"></span> <span id="calcHashSymbol"></span>/day</span>
+            <span class="input-group-addon" id="calcHashResultsHolder"><span id="calcHashAmount"></span> <span id="calcHashSymbol"></span>/天</span>
         </div>
     </div>
 </div>
@@ -246,12 +226,12 @@
 <hr>
 
 <div class="stats">
-    <h3>挖矿状态和支付历史</h3>
+    <h3>矿工状态和支付历史</h3>
 
     <div class="input-group">
-        <input class="form-control" id="yourStatsInput" type="text" placeholder="输入待查询的钱包地址">
+        <input class="form-control" id="yourStatsInput" type="text" placeholder="请输入您的钱包地址">
         <span class="input-group-btn"><button class="btn btn-default" type="button" id="lookUp">
-            <span><i class="fa fa-search"></i> 点击查看</span>
+            <span><i class="fa fa-search"></i> 搜索</span>
             <span><i class="fa fa-refresh fa-spin"></i> 查询中...</span>
         </button></span>
     </div>
