--- a/website/admin.html
+++ b/website/admin.html
@@ -223,6 +223,12 @@
 </head>
 <body>
 
+<!-- TODO:
+			1. Add a UI to add news items into redis so I don't have to edit the page.
+			2. Lookups by for workers for each wallet (If possible) - maybe use password param in miners?
+			3. Better auth process for admin page!
+-->
+
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
