--- a/website/index.html
+++ b/website/index.html
@@ -5,27 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 
-    <title>门罗币矿池 — XMRPool</title>
 
-    <script src="//apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
-    <link href="//lib.baomitu.com/twitter-bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <title>Monero - NodePool</title>
+
+    <script src="//lib.baomitu.com/jquery/2.2.1/jquery.min.js"></script>
+    <script src="//lib.baomitu.com/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
+    <script src="//lib.baomitu.com/jquery-sparklines/2.1.2/jquery.sparkline.min.js"></script>
+    <link href="///lib.baomitu.com/twitter-bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="//lib.baomitu.com/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- <link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css"> -->
+    <link href="//lib.baomitu.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 
     <script src="config.js"></script>
     <script src="custom.js"></script>
-    <link href="custom.css" rel="stylesheet">
 
     <style>
         #coinName{
             text-transform: capitalize;
         }
         body {
-            padding-top: 90px;
+            padding-top: 65px;
             padding-bottom: 80px;
             overflow-y: scroll;
         }
@@ -77,6 +76,7 @@
         }
 
     </style>
+
     <link href="custom.css" rel="stylesheet">
 
 </head>
@@ -120,7 +120,7 @@
     function getTransactionUrl(id) {
         return transactionExplorer.replace('{symbol}', lastStats.config.symbol.toLowerCase()).replace('{id}', id);
     }
-    
+
     $.fn.update = function(txt){
         var el = this[0];
         if (el.textContent !== txt)
@@ -139,7 +139,7 @@
 
     function updateText(elementId, text){
         var el = document.getElementById(elementId);
-        if (el.textContent !== text){
+        if (el == null || el.textContent !== text){
             el.textContent = text;
         }
         return el;
@@ -289,7 +289,6 @@
 
     function updateIndex(){
         updateText('coinName', lastStats.config.coin);
-        updateText('poolVersion', lastStats.config.version);
     }
 
     function getBlockchainUrl(id) {
@@ -298,11 +297,12 @@
 
     $(function(){
 		$("head").append("<link rel='stylesheet' href=" + themeCss + ">");
-		
         $.get(api + '/stats', function(data){
+          if(data != null){
             lastStats = data;
             updateIndex();
             routePage(fetchLiveStats);
+          }
         });
     });
 
@@ -318,33 +318,41 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand"></span> 门罗币矿池 </a>
+            <a class="navbar-brand"><span id="coinName"></span> - NodePool</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
 
                 <li class="active"><a class="hot_link" data-page="home.html" href="#">
-                    <i class="fa fa-home"></i> 首页
+                    <i class="fa fa-home"></i> Home
                 </a></li>
 
                 <li><a class="hot_link" data-page="getting_started.html" href="#getting_started">
-                    <i class="fa fa-rocket"></i> 开始挖矿
+                    <i class="fa fa-rocket"></i> Getting Started
                 </a></li>
 
                 <li><a class="hot_link" data-page="pool_blocks.html" href="#pool_blocks">
-                    <i class="fa fa-cubes"></i> 矿池爆块
+                    <i class="fa fa-cubes"></i> Pool Blocks
                 </a></li>
 
                 <li><a class="hot_link" data-page="payments.html" href="#payments">
-                    <i class="fa fa-paper-plane-o"></i> 支付记录
+                    <i class="fa fa-paper-plane-o"></i> Payments
                 </a></li>
 
                 <li><a class="hot_link" data-page="support.html" href="#support">
-                    <i class="fa fa-comments"></i> 矿池信息
+                    <i class="fa fa-comments"></i> Support
                 </a></li>
-
+                <!-- Example from monerohash.com -->
+                <!-- <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                    <i class="fa fa-chain"></i> Network <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a class="hot_link" data-page="network.html" href="#network">Hashrate Distribution</a></li>
+                        <li><a href="nodes-distribution.html">Nodes Distribution</a></li>
+                    </ul>
+                </li> -->
             </ul>
-            <div id="stats_updated">状态刷新中 &nbsp;<i class="fa fa-bolt"></i></div>
+            <div id="stats_updated">Stats Updated &nbsp;<i class="fa fa-bolt"></i></div>
         </div>
 
     </div>
@@ -360,8 +368,8 @@
 
 <footer>
     <div class="text-muted">
-        Powered by <a target="_blank" href="//github.com/online2311/cryptonote-universal-pool"><i class="fa fa-github"></i> cryptonote-universal-pool</a><span id="poolVersion"></span>
-     </div>
+        Powered by <a target="_blank" href="https://nodepool.cn">NodePool</a> 
+       </div>
 </footer>
 
 
