--- a/website/pages/getting_started.html
+++ b/website/pages/getting_started.html
@@ -48,82 +48,55 @@
 </style>
 
 
-<h3>矿池挖矿信息：</h3>
+<h3>Connection Details</h3>
 <div class="stats">
-    <div><i class="fa fa-cloud"></i> 矿池挖矿地址: <span id="miningPoolHost"></span>:难度端口(3333 5555 7777 8888)</div>
-<h4>难度越高出块几率越高收益越高，算力过低用户可能无任何收益</h4>
-<h4>目前本矿池支持直接发送到交易所钱包！只要在挖矿地址后加.PaymentID即可自动发送（EXCHANGE_ADDRESS.your_payment_id）[不推荐]</h4>
-<h4>注意：如果使用 钱包地址.PaymentID 挖矿，查询挖矿速度也要用这个格式查询。挖矿至交易所充值地址需要每满10个门罗币支付一次。</h4>
-<h4>如果你要固定难度请用 钱包地址@难度 或者 钱包地址.payment_id@难度 最大难度是50000</h4>
+    <div><i class="fa fa-cloud"></i> Mining Pool Address: <span id="miningPoolHost"></span></div>
 </div>
+
+<h4>Mining Ports</h4>
 <div id="miningPorts" class="row">
     <div class="stats">
-        <div><i class="fa fa-tachometer"></i> 矿池端口: <span class="miningPort"></span></div>
-        <div><i class="fa fa-unlock-alt"></i> 起始难度: <span class="miningPortDiff"></span></div>
-        <div><i class="fa fa-question"></i> 说明: <span class="miningPortDesc"></span></div>
+        <div><i class="fa fa-tachometer"></i> Port: <span class="miningPort"></span></div>
+        <div><i class="fa fa-unlock-alt"></i> Starting Difficulty: <span class="miningPortDiff"></span></div>
+        <div><i class="fa fa-question"></i> Description: <span class="miningPortDesc"></span></div>
     </div>
 </div>
 
 <hr>
 
-<h3>For <i class="fa fa-windows"></i> Windows 挖软件软件</h3>
+<h3>For <i class="fa fa-windows"></i> Windows users new to mining</h3>
 <p class="getting_started_windows">
-    软件测试中 <a class="btn btn-default btn-sm" target="_blank" id="easyminer_link"><i class="fa fa-download"></i> 即将提供下载</a>
-    解压后运行 <a target="_blank" href="#">easy-miner</a> <i class="fa fa-github"></i>
-    同时支持CPU和GPU
+    You can <a class="btn btn-default btn-sm" target="_blank" id="easyminer_link"><i class="fa fa-download"></i> Download</a>
+    and run <a target="_blank" href="https://github.com/zone117x/cryptonote-easy-miner">cryptonote-easy-miner</a> <i class="fa fa-github"></i>
+    which will automatically generate your wallet address and run CPUMiner with the proper parameters.
 </p>
 
 <hr>
 
-<h3>在线门罗币钱包[推荐]</h3>
-<p>
-    <ul>
-        <li><a target="_blank" href="http://monero.cc/getting-started/">Getting started with Monero</a></li>
-        <li>Monero information and news on its <a href="https://bitcointalk.org/index.php?topic=583449.0">BitcoinTalk announcement thread</a></li>
-    </ul>
-</p>
-
-<hr>
-
-<h3>挖矿程序</h3>
+<h3>Mining Apps</h3>
 <div class="yourStats table-responsive">
     <table class="table">
         <thead>
         <tr>
-            <th><i class="fa fa-book"></i> 矿机名称 </th>
-            <th><i class="fa fa-car"></i> 矿机类型 </th>
-            <th><i class="fa fa-download"></i> 下载地址 </th>
-            <th><i class="fa fa-comments"></i> 论坛 </th>
-            <th><i class="fa fa-file-code-o"></i> 源码 </th>
+            <th><i class="fa fa-book"></i> App Name</th>
+            <th><i class="fa fa-car"></i> Architecture</th>
+            <th><i class="fa fa-download"></i> Downloads</th>
+            <th><i class="fa fa-comments"></i> Discussion</th>
+            <th><i class="fa fa-file-code-o"></i> Source Code</th>
         </tr>
         </thead>
         <tbody id="mining_apps">
         <tr>
-            <td class="miningAppTitle">XMR-Stak-CPU (by fireice_uk)</td>
+            <td class="miningAppTitle">XMR-STAK Miner (fireice-uk based on wolf)</td>
             <td>CPU</td>
-            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-cpu/releases">Github</a></td>
-            <td><a target="_blank" href="https://www.reddit.com/r/Monero/comments/5lsfgt/xmrstakcpu_high_performance_open_source_miner/">Reddit</a></td>
-            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-cpu">Github</a></td>
+            <td><a target="_blank" href="https://amp.reddit.com/r/Monero/comments/5lsfgt/xmrstakcpu_high_performance_open_source_miner/">Reddit Post</a></td>
+            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-cpu">GitHub Repo</a></td>
+            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-cpu/releases">Github Release Binary</a></td>
         </tr>
         <tr>
             <td colspan="5">
                 <span>Example:</span>
-                <code>xmr-stak-cpu</code>
-                Please edit <code>config.txt</code> file to suit your needs.
-            </td>
-        </tr>
-        <tr>
-            <td class="miningAppTitle">XMR-Stak-AMD (by fireice_uk)</td>
-            <td>OpenCL (AMD)</td>
-            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-amd/releases">Github</a></td>
-            <td><a target="_blank" href="https://www.reddit.com/r/Monero/comments/5prg4a/xmrstakamd_released/">reddit</a></td>
-            <td><a target="_blank" href="https://github.com/fireice-uk/xmr-stak-amd">Github</a></td>
-        </tr>
-        <tr>
-            <td colspan="5">
-                <span>Example:</span>
-                <code>xmr-stak-amd</code>
-                Please edit <code>config.txt</code> file to suit your needs.
+                <code>xmr-stak-cpu.exe</code>
             </td>
         </tr>
         <tr>
@@ -135,7 +108,7 @@
         </tr>
         <tr>
             <td colspan="5">
-                <span>示例 Example:</span>
+                <span>Example:</span>
                 <code>minerd -a cryptonight -o stratum+tcp://<span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
             </td>
         </tr>
@@ -144,11 +117,11 @@
             <td>CPU</td>
             <td><a target="_blank" href="https://mega.co.nz/#F!UlkU0RyR!E8n4CFkqVu0WoOnsJnQkSg">MEGA</a></td>
             <td><a target="_blank" href="https://twitter.com/yvg1900">Twitter</a></td>
-            <td>未开源 Proprietary <i class="fa fa-frown-o"></i></td>
+            <td>Proprietary <i class="fa fa-frown-o"></i></td>
         </tr>
         <tr>
             <td colspan="5">
-                <span>示例 Example:</span>
+                <span>Example:</span>
                 <code>yam -c x -M stratum+tcp://<span class="exampleAddress">YOUR_WALLET_ADDRESS</span>:x@<span class="exampleHost"></span>:<span class="examplePort"></span>/xmr</code>
             </td>
         </tr>
@@ -157,11 +130,11 @@
             <td>CPU</td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=647251.0">BitcoinTalk</a></td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=647251.0">BitcoinTalk</a></td>
-            <td>未开源 Proprietary <i class="fa fa-frown-o"></i></td>
+            <td>Proprietary <i class="fa fa-frown-o"></i></td>
         </tr>
         <tr>
             <td colspan="5">
-                <span>示例 Example:</span>
+                <span>Example:</span>
                 <code>NsCpuCNMiner64 -o stratum+tcp://<span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
             </td>
         </tr>
@@ -170,11 +143,11 @@
             <td>OpenCL (AMD)</td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=638915.0">BitcoinTalk</a></td>
             <td><a target="_blank" href="https://bitcointalk.org/index.php?topic=638915.0">Discussion</a></td>
-            <td>未开源 Proprietary <i class="fa fa-frown-o"></i></td>
+            <td>Proprietary <i class="fa fa-frown-o"></i></td>
         </tr>
         <tr>
             <td colspan="5">
-                <span>示例 Example:</span>
+                <span>Example:</span>
                 <code>NsGpuCNMiner -o stratum+tcp://<span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
             </td>
         </tr>
@@ -187,7 +160,7 @@
         </tr>
         <tr>
             <td colspan="5">
-                <span>示例 Example:</span>
+                <span>Example:</span>
                 <code>ccminer -o stratum+tcp://<span class="exampleHost"></span>:<span class="examplePort"></span> -u <span class="exampleAddress">YOUR_WALLET_ADDRESS</span> -p x</code>
             </td>
         </tr>
