--- a/website/pages/payments.html
+++ b/website/pages/payments.html
@@ -18,10 +18,10 @@
 </style>
 
 <div class="paymentsStatHolder">
-    <span class="bg-primary">总计支付次数: <span id="paymentsTotal"></span></span>
-    <span class="bg-info">总计支付矿工数量: <span id="paymentsTotalPaid"></span></span>
-    <span class="bg-info">最小支付数量: <span id="paymentsMinimum"></span></span>
-    <span class="bg-info">最小货币单位: <span id="paymentsDenomination"></span></span>
+    <span class="bg-primary">Total Payments: <span id="paymentsTotal"></span></span>
+    <span class="bg-info">Total Miners Paid: <span id="paymentsTotalPaid"></span></span>
+    <span class="bg-info">Minimum Payment Threshold: <span id="paymentsMinimum"></span></span>
+    <span class="bg-info">Denomination Unit: <span id="paymentsDenomination"></span></span>
 </div>
 
 <hr>
@@ -30,11 +30,11 @@
     <table class="table table-hover table-striped">
         <thead>
         <tr>
-            <th><i class="fa fa-clock-o"></i> 支付时间</th>
-            <th><i class="fa fa-paw"></i> 支付记录</th>
-            <th><i class="fa fa-money"></i> 数量</th>
+            <th><i class="fa fa-clock-o"></i> Time Sent</th>
+            <th><i class="fa fa-paw"></i> Transaction Hash</th>
+            <th><i class="fa fa-money"></i> Amount</th>
             <th><i class="fa fa-tag"></i> Fee</th>
-            <th><i class="fa fa-sitemap"></i> 混合次数</th>
+            <th><i class="fa fa-sitemap"></i> Mixin</th>
             <th><i class="fa fa-group"></i> Payees</th>
         </tr>
         </thead>
@@ -45,7 +45,7 @@
 </div>
 
 <p class="text-center">
-    <button type="button" class="btn btn-default" id="loadMorePayments">加载更多</button>
+    <button type="button" class="btn btn-default" id="loadMorePayments">Load More</button>
 </p>
 
 
