--- a/website/pages/pool_blocks.html
+++ b/website/pages/pool_blocks.html
@@ -24,8 +24,8 @@
 </style>
 
 <div class="blocksStatHolder">
-    <span class="bg-primary">矿池出块总数: <span id="blocksTotal"></span></span>
-    <span class="bg-info">成熟度要求: <span id="blocksMaturityCount"></span></span>
+    <span class="bg-primary">Total Blocks Mined: <span id="blocksTotal"></span></span>
+    <span class="bg-info">Maturity Depth Requirement: <span id="blocksMaturityCount"></span></span>
 </div>
 
 <hr>
@@ -34,12 +34,12 @@
     <table class="table table-hover">
         <thead>
         <tr>
-            <th><i class="fa fa-bars"></i> 区块高度</th>
-            <th title="How many more blocks network must mine before this block is matured"><i class="fa fa-link"></i> 成熟度</th>
-            <th><i class="fa fa-unlock-alt"></i> 算力难度</th>
+            <th><i class="fa fa-bars"></i> Height</th>
+            <th title="How many more blocks network must mine before this block is matured"><i class="fa fa-link"></i> Maturity</th>
+            <th><i class="fa fa-unlock-alt"></i> Difficulty</th>
             <th><i class="fa fa-paw"></i> Block Hash</th>
-            <th><i class="fa fa-clock-o"></i> 发现时间</th>
-            <th><i class="fa fa-star-half-o"></i> 幸运值</th>
+            <th><i class="fa fa-clock-o"></i> Time Found</th>
+            <th><i class="fa fa-star-half-o"></i> Shares/Diff</th>
         </tr>
         </thead>
         <tbody id="blocks_rows">
