--- a/website/index.html
+++ b/website/index.html
@@ -324,23 +324,23 @@
             <ul class="nav navbar-nav">
 
                 <li class="active"><a class="hot_link" data-page="home.html" href="#">
-                    <i class="fa fa-home"></i> Home
+                    <i class="fa fa-home"></i> 主页
                 </a></li>
 
                 <li><a class="hot_link" data-page="getting_started.html" href="#getting_started">
-                    <i class="fa fa-rocket"></i> Getting Started
+                    <i class="fa fa-rocket"></i> 矿池说明
                 </a></li>
 
                 <li><a class="hot_link" data-page="pool_blocks.html" href="#pool_blocks">
-                    <i class="fa fa-cubes"></i> Pool Blocks
+                    <i class="fa fa-cubes"></i> 矿池区块
                 </a></li>
 
                 <li><a class="hot_link" data-page="payments.html" href="#payments">
-                    <i class="fa fa-paper-plane-o"></i> Payments
+                    <i class="fa fa-paper-plane-o"></i> 支付记录
                 </a></li>
 
                 <li><a class="hot_link" data-page="support.html" href="#support">
-                    <i class="fa fa-comments"></i> Support
+                    <i class="fa fa-comments"></i> 联系方式
                 </a></li>
                 <!-- Example from monerohash.com -->
                 <!-- <li class="dropdown">
@@ -352,7 +352,7 @@
                     </ul>
                 </li> -->
             </ul>
-            <div id="stats_updated">Stats Updated &nbsp;<i class="fa fa-bolt"></i></div>
+            <div id="stats_updated">数据更新.. &nbsp;<i class="fa fa-bolt"></i></div>
         </div>
 
     </div>
