--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -75,32 +75,51 @@
     }
 </style>
 
+<div class="panel panel-info" id="news">
+    <div class="panel-heading">
+        新闻
+    </div>
+    <div class="panel-body" style="max-height: 234px;">
+        <ul class="news">
+            <li><b>2017.09.05</b> - NodePool 矿池 正式启动</b></li>
+        </ul>
+    </div>
+</div> 
+
 <div id="siteInfo">
+    <h3>NodePool 矿池信息:</h3>
+    <nobr><i class="fa fa-check" aria-hidden="true"></i> NodePool 矿池采用BGP网络</nobr>
+    <nobr><i class="fa fa-check" aria-hidden="true"></i> 更低的延迟、更快的速度</nobr>
+    <nobr><i class="fa fa-check" aria-hidden="true"></i> 阿里云DDoS保护</nobr>
+    <nobr><i class="fa fa-check" aria-hidden="true"></i> 支持交易所充值地址</nobr>
+    <nobr><i class="fa fa-check" aria-hidden="true"></i> 网站采用 SSL/TLS加密</nobr>
+    <nobr><i class="fa fa-check" aria-hidden="true"></i> 满足0.1XMR 支付</nobr>
+
 </div>
 
 <div class="row">
     <div class="col-md-4 stats">
-        <h3>Network</h3>
-        <div><i class="fa fa-tachometer"></i> Hash Rate: <span id="networkHashrate"></span></div>
-        <div><i class="fa fa-clock-o"></i> Block Found: <span id="networkLastBlockFound"></span></div>
-        <div><i class="fa fa-unlock-alt"></i> Difficulty: <span id="networkDifficulty"></span></div>
-        <div><i class="fa fa-bars"></i> Blockchain Height: <span id="blockchainHeight"></span></div>
-        <div><i class="fa fa-money"></i> Last Reward: <span id="networkLastReward"></span></div>
-        <div><i class="fa fa-paw"></i> Last Hash: <a id="lastHash" target="_blank"></a></div>
+        <h3>全网状态</h3>
+        <div><i class="fa fa-tachometer"></i> 全网算力: <span id="networkHashrate"></span></div>
+        <div><i class="fa fa-clock-o"></i> 区块时间: <span id="networkLastBlockFound"></span></div>
+        <div><i class="fa fa-unlock-alt"></i> 当前难度: <span id="networkDifficulty"></span></div>
+        <div><i class="fa fa-bars"></i> 区块高度: <span id="blockchainHeight"></span></div>
+        <div><i class="fa fa-money"></i> 区块奖励: <span id="networkLastReward"></span></div>
+        <div><i class="fa fa-paw"></i> 区块地址: <a id="lastHash" target="_blank"></a></div>
     </div>
 
     <div class="col-md-4 stats">
-        <h3>Our Pool</h3>
-        <div><i class="fa fa-tachometer"></i> Hash Rate: <span id="poolHashrate"></span></div>
-        <div><i class="fa fa-clock-o"></i> Block Found: <span id="poolLastBlockFound"></span></div>
-        <div><i class="fa fa-users"></i> Connected Miners: <span id="poolMiners"></span></div>
-	<div id="donations"><i class="fa fa-gift"></i> Donations: <span id="poolDonations"></span></div>
-	<div><i class="fa fa-money"></i> Total Pool Fee: <span id="poolFee"></span></div>
-        <div><i class="fa fa-history"></i> Block Found Every: <span id="blockSolvedTime"></span> (est.)</div>
+        <h3>矿池状态</h3>
+        <div><i class="fa fa-tachometer"></i> 矿池算力: <span id="poolHashrate"></span></div>
+        <div><i class="fa fa-clock-o"></i> 区块时间: <span id="poolLastBlockFound"></span></div>
+        <div><i class="fa fa-users"></i> 矿工数量: <span id="poolMiners"></span></div>
+	<div id="donations"><i class="fa fa-gift"></i> 捐献费用: <span id="poolDonations"></span></div>
+	<div><i class="fa fa-money"></i> 矿池费用: <span id="poolFee"></span></div>
+        <div><i class="fa fa-history"></i> 预计出块时间: <span id="blockSolvedTime"></span> (预计.)</div>
     </div>
 
 <div class="col-md-4 stats marketRate">
-        <h3 id="marketHeader">Market Data</h3>
+        <h3 id="marketHeader">市场数据</h3>
         <div class="marketFooter">Market Data: <span id="marketLastUpdated"></span></div>
     </div>
 
@@ -204,10 +223,11 @@
 <!-- <hr> -->
 
 <div id="miningProfitCalc">
-    <h3>Estimate Mining Profits</h3>
+    <h3>挖矿收益（仅供参考）</h3>
+<h4>此结果是根据全网难度与全网算力计算得出，仅供参考</h4>
     <div id="calcHashHolder">
         <div class="input-group">
-            <input type="number" class="form-control" id="calcHashRate" placeholder="Enter Your Hash Rate">
+            <input type="number" class="form-control" id="calcHashRate" placeholder="请输入您的矿机算力">
             <div class="input-group-btn">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="calcHashDropdown">
                     <span id="calcHashUnit" data-mul="1">KH/s</span> <span class="caret"></span>
@@ -219,7 +239,7 @@
                 </ul>
             </div>
             <span class="input-group-addon">=</span>
-            <span class="input-group-addon" id="calcHashResultsHolder"><span id="calcHashAmount"></span> <span id="calcHashSymbol"></span>/day</span>
+            <span class="input-group-addon" id="calcHashResultsHolder"><span id="calcHashAmount"></span> <span id="calcHashSymbol"></span>/天</span>
         </div>
     </div>
 </div>
@@ -227,13 +247,13 @@
 <hr>
 
 <div class="stats">
-    <h3>Your Stats & Payment History</h3>
+    <h3>矿工状态&支付记录</h3>
 
     <div class="input-group">
-        <input class="form-control" id="yourStatsInput" type="text" placeholder="Enter Your Address">
+        <input class="form-control" id="yourStatsInput" type="text" placeholder="请输入您的钱包地址">
         <span class="input-group-btn"><button class="btn btn-default" type="button" id="lookUp">
-            <span><i class="fa fa-search"></i> Lookup</span>
-            <span><i class="fa fa-refresh fa-spin"></i> Searching...</span>
+            <span><i class="fa fa-search"></i> 搜索</span>
+            <span><i class="fa fa-refresh fa-spin"></i> 搜索中...</span>
         </button></span>
     </div>
 
@@ -241,11 +261,11 @@
         <div class="col-sm-4 stats">
             <div id="addressError"></div>
             <!-- <div class="yourStats"><i class="fa fa-key"></i> Address: <span id="yourAddressDisplay"></span></div> -->
-            <div class="yourStats"><i class="fa fa-bank"></i> Pending Balance: <span id="yourPendingBalance"></span></div>
-            <div class="yourStats"><i class="fa fa-money"></i> Total Paid: <span id="yourPaid"></span></div>
-            <div class="yourStats"><i class="fa fa-clock-o"></i> Last Share Submitted: <span id="yourLastShare"></span></div>
-            <div class="yourStats"><i class="fa fa-tachometer"></i> Hash Rate: <span id="yourHashrateHolder"></span></div>
-            <div class="yourStats"><i class="fa fa-cloud-upload"></i> Total Hashes Submitted: <span id="yourHashes"></span></div>
+            <div class="yourStats"><i class="fa fa-bank"></i> 待支付: <span id="yourPendingBalance"></span></div>
+            <div class="yourStats"><i class="fa fa-money"></i> 总支付: <span id="yourPaid"></span></div>
+            <div class="yourStats"><i class="fa fa-clock-o"></i> 最近算力提交时间: <span id="yourLastShare"></span></div>
+            <div class="yourStats"><i class="fa fa-tachometer"></i> 矿工算力: <span id="yourHashrateHolder"></span></div>
+            <div class="yourStats"><i class="fa fa-cloud-upload"></i> 提交算力总计: <span id="yourHashes"></span></div>
         </div>
         <div class="col-sm-4">
             <div class="userChart" data-chart="user_hashrate">
@@ -268,15 +288,15 @@
 
     <br class="yourStats">
 
-    <h4 class="yourStats">Payments</h4>
+    <h4 class="yourStats">支付记录</h4>
     <div class="yourStats table-responsive">
         <table class="table table-striped">
             <thead>
             <tr>
-                <th><i class="fa fa-clock-o"></i> Time Sent</th>
-                <th><i class="fa fa-paw"></i> Transaction Hash</th>
-                <th><i class="fa fa-money"></i> Amount</th>
-                <th><i class="fa fa-sitemap"></i> Mixin</th>
+                <th><i class="fa fa-clock-o"></i> 支付时间</th>
+                <th><i class="fa fa-paw"></i> 支付记录</th>
+                <th><i class="fa fa-money"></i> 支付数量</th>
+                <th><i class="fa fa-sitemap"></i> 加密次数</th>
             </tr>
             </thead>
             <tbody id="payments_rows">
@@ -285,7 +305,7 @@
         </table>
     </div>
     <p class="yourStats text-center">
-        <button type="button" class="btn btn-default" id="loadMorePayments">Load More</button>
+        <button type="button" class="btn btn-default" id="loadMorePayments">加载更多</button>
     </p>
 
 </div>
